# antworker

./: .gitignore  Cargo.toml  README.md
src/: crud.rs  datemath.rs  db.rs  email_parser.rs  email_sender.rs  enums.rs  factories.rs  io.rs  main.rs  rules.rs
src/command/: open.rs
src/crud/: create_email.rs  delete_email.rs  delete_mailbox.rs  get_email.rs  get_mailbox.rs
src/datemath/: date.rs  tests.rs
src/db/: connect.rs  email.rs  enums.rs  mailbox.rs  tests.rs
src/email_parser/: attachment.rs  inbox.rs  main.rs  parser.rs
src/email_sender/: attachment.rs  sender.rs  tests.rs
src/factories/: credentials.rs  tests.rs
src/io/: files.rs  save_location.rs  tests.rs
src/rules/: define.rs  save_location.rs  tests.rs
