[package]
name = "antworker"
authors = ["Maciej Gierada @mgierada"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.108"
lazy_static = "1.4.0"
imap = "2.4.1"
native-tls = "0.2.11"
tokio = {version = "1.33.0", features = ["full"]}
quoted_printable = "0.5.0"
mailparse = "0.14.0"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
clap = {version = "4.4.11", features = ["derive"] }
lettre = "0.11.3"
indicatif = "0.17.7"

[dev-dependencies]
mockito = "1.2.0"

